--- a/FACLSchichtbericht/Views/Dutymanager/IndexActiontrackerabgeschlossen.cshtml
+++ b/FACLSchichtbericht/Views/Dutymanager/IndexActiontrackerabgeschlossen.cshtml
@@ -102,6 +102,7 @@
                                                                                 @Html.DisplayFor(modelItem => item.BerichtBU420_ID)}
         </td>
         <td>
+            <a asp-action="EditActiontracker" asp-route-id="@item.ID">Edit</a> |
             <a asp-action="DetailsActiontracker" asp-route-id="@item.ID">Details</a>
         </td>
     </tr>}
